# c_primer_plus

./: .gitignore  CMakeLists.txt  template.c
c_&/: c_and.c
c_++/: main.cpp
c_array/: arf.c  c_array.c  day_mon3.c  order.c  sum_arr1.c  sum_arr2.c  sum_arr3.c
c_const/: c_const.c  c_const2.c
c_data_type/: bases.c  beep.c  char.c  const.c  pizza.c  print1.c  toobig.c
c_enum/: c_enum.c
c_exchange/: c_exchange.c
c_file/: README.md  c_read_file.c
c_fun_pointer/: c_fun_cptr.c  c_fun_ptr.c
c_function/: lookcheck.c  swap.c
c_make/: CMakeLists.txt  Hello.c  Makefile
c_malloc/: c_malloc.c
c_pointer/: c_ponter_nil.c  c_ptr_ops.c
c_scanf/: scanf.c
c_struct/: struct1.c
c_typedef/: c_typedef.c
